[project]
name = "api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.13"
dependencies = [
    "flask>=3.1.3",
    "gevent>=26.4.0",
    "gitpython>=3.1.46",
    "gunicorn>=25.3.0",
    "requests>=2.33.1",
    "simplejson>=4.0.1",
    "six>=1.17.0",
]

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.11",
]
